k8s/dev/network-policy/restrict-db-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-postgres-access
  namespace: minishop-dev
spec:
  # Apply this policy to pods matching 'app: postgres'
  podSelector:
    matchLabels:
      app: postgres
  
  # Specify policy direction: Ingress (incoming traffic to Postgres)
  policyTypes:
    - Ingress

  # Whitelist rule: ONLY allow incoming traffic from backend pods
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 5432
